<resources>
    <string name="app_name">CS125Final</string>
    <string name="welcome">Welcome!</string>
    <string name="begin">Begin</string>
    <string name="exit">Exit</string>
    <string name="my_cat_prince">My Cat Prince</string>
    <string name="textview">TextView</string>
    <string name="next">Next</string>
    <string name="hi">hi</string>
    <string name="click_to_continue">*** Click to Continue ***</string>
    <string name="name">Name</string>
    <string name="i_don_t_know">I don’t know.</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="dagger">Dagger</string>
    <string name="sword">Sword</string>
    <string name="no_weapon">No Weapon - try to talk to them.</string>
    <string name="yes">Yes - join the fight.</string>
    <string name="no1">No - attack your companion.</string>
    <string name="no2">No - stand on the sidelines and watch the fight.</string>
    <string name="replay">Replay</string>
    <string name="end_game">End Game</string>
</resources>
