<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".partOne">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="329dp"
            android:layout_height="472dp"
            android:background="@drawable/masked"
            android:orientation="vertical">

        </LinearLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_round2"
            android:ems="10"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginStart="169dp"
            android:layout_marginLeft="169dp"
            android:layout_marginEnd="154dp"
            android:layout_marginRight="154dp"
            android:layout_marginTop="20dp"
            android:text="@string/next"
            android:visibility="gone"
            android:enabled="false"
            android:onClick="userName"/>

        <LinearLayout
            android:id="@+id/choiceGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/choice3"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_round2"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:text="@string/right"
                android:textColor="#1B0606"
                android:textSize="18sp"
                app:fontFamily="@font/aladin" />

            <TextView
                android:id="@+id/choice2"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_round2"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:text="@string/left"
                android:textColor="#1B0606"
                android:textSize="18sp"
                app:fontFamily="@font/aladin" />

            <TextView
                android:id="@+id/choice1"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_round2"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:text="@string/i_don_t_know"
                android:textColor="#1B0606"
                android:textSize="18sp"
                app:fontFamily="@font/aladin" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/storyStuff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_round"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/StoryText"
                android:layout_width="378dp"
                android:layout_height="128dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="24sp"
                app:fontFamily="@font/aladin" />

            <TextView

                android:id="@+id/clickCont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="20dp"
                android:text="@string/click_to_continue"
                app:layout_constraintBottom_toBottomOf="@id/StoryText"
                android:layout_marginStart="240dp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>