<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".partThree">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="524dp"
            android:layout_height="420dp"
            android:layout_gravity="center"
            android:layout_marginBottom="52dp"
            android:background="@drawable/bandit"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/choiceGroup3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/yes"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_round2"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:text="@string/yes"
                android:textColor="#1B0606"
                android:textSize="18sp"
                app:fontFamily="@font/aladin" />

            <TextView
                android:id="@+id/no1"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_round2"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:text="@string/no1"
                android:textColor="#1B0606"
                android:textSize="18sp"
                app:fontFamily="@font/aladin" />

            <TextView
                android:id="@+id/no2"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_round2"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:text="@string/no2"
                android:textColor="#1B0606"
                android:textSize="18sp"
                app:fontFamily="@font/aladin" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/storyGroup3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_round"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/storyText3"
                android:layout_width="378dp"
                android:layout_height="128dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="24sp"
                app:fontFamily="@font/aladin" />

            <TextView

                android:id="@+id/clickCont3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="240dp"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="20dp"
                android:text="@string/click_to_continue"
                app:layout_constraintBottom_toBottomOf="@id/StoryText" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>